--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "testing-adobe-cli",
-  "version": "1.1.0",
+  "name": "@adobe/helix-cli",
+  "version": "14.22.0",
   "description": "Project Helix CLI",
   "main": "index.js",
   "type": "module",
